# logistics-operations

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
notebooks/eda/: explorer_ files.ipynb  kaggle_about_dataset_reference.ipynb  logistics_operations_eda.ipynb  route-optimization.ipynb
scripts/: ingest_dataset.py
src/logistics_ops/: __init__.py  bootstrap.py  exceptions.py  notebooks.py
src/logistics_ops/api/: __init__.py  app.py  dependencies.py
src/logistics_ops/api/routers/: health.py  ingestion.py
src/logistics_ops/api/schemas/: common.py  ingestion.py
src/logistics_ops/application/dto/: ingestion_result.py
src/logistics_ops/application/use_cases/: sync_dataset_to_object_storage.py
src/logistics_ops/domain/entities/: dataset_asset.py
src/logistics_ops/domain/ports/: dataset_source.py  object_storage.py
src/logistics_ops/infrastructure/config/: settings.py
src/logistics_ops/infrastructure/readers/: __init__.py  hybrid_tabular_reader.py  local_tabular_reader.py  minio_tabular_reader.py
src/logistics_ops/infrastructure/sources/: __init__.py  kagglehub_dataset_source.py
src/logistics_ops/infrastructure/storage/: __init__.py  minio_object_storage.py
tests/: __init__.py  conftest.py
tests/integration/: conftest.py
tests/integration/storage/: test_minio_object_storage_integration.py
tests/unit/: test_notebooks.py
tests/unit/api/: test_app.py
tests/unit/application/use_cases/: test_sync_dataset_to_object_storage.py
tests/unit/infrastructure/readers/: test_hybrid_tabular_reader.py  (+2 more)
(+1 files in other folders)
